# shellcodes

./: README.md
loader/: CMakeLists.txt  README.md  remote_simple_loader.cpp  url_obfuscator.py
loader/app/: config.hpp  main_loader.cpp  main_research.cpp
loader/include/api_hash/: api_hash.hpp
loader/include/cryptography/: rc4.hpp
loader/include/evasion/: evasion.hpp
loader/include/inject/: inject.hpp
loader/include/integrity/: export_parser.hpp  hook_scanner.hpp  process_enum.hpp
loader/include/native/: native_api.hpp  nt_types.hpp
loader/include/net/: http_client_winsock.hpp  url.hpp
loader/include/syscall/: syscall.hpp
loader/include/telemetry/: report.hpp
loader/include/unhook/: unhook.hpp
loader/src/api_hash/: api_hash.cpp
loader/src/evasion/: evasion.cpp
loader/src/inject/: inject.cpp
loader/src/integrity/: export_parser.cpp  hook_scanner.cpp  process_enum.cpp
loader/src/native/: native_api.cpp
loader/src/net/: http_client_winsock.cpp  url.cpp
loader/src/syscall/: syscall.cpp
loader/src/telemetry/: report.cpp
loader/src/unhook/: unhook.cpp
